[package]
name = "scrapping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
reqwest = {version="0.12.9", features=["json"]}
